--- a/.env.dev
+++ b/.env.dev
@@ -23,6 +23,10 @@ WIKI_DATABASE_NAME=mediawiki
 WIKI_DATABASE_USER=mediawiki
 WIKI_DATABASE_PASSWORD=mediawiki
 
+# debug
+WIKI_DEBUG=true
+WIKI_DISABLE_CACHE=true
+
 # use by acme
 ACME_EMAIL=acme@example.com
 
