--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,8 +9,8 @@ services:
       - ./mediawiki/LocalSettings.php:${MW_INSTALL_PATH}/LocalSettings.php
       - ./mediawiki/dev.htaccess:${MW_INSTALL_PATH}/.htaccess
     environment:
-      WIKI_DEBUG: "true"
-      WIKI_DEBUG_DISABLE_CACHE: "true"
+      WIKI_DEBUG:
+      WIKI_DISABLE_CACHE:
     labels:
       traefik.http.routers.wiki-secure.tls.certresolver: pebble
     networks:
