enable cache by default

--- a/.env.dev
+++ b/.env.dev
@@ -25,7 +25,7 @@ WIKI_DATABASE_PASSWORD=mediawiki
 
 # debug
 WIKI_DEBUG=true
-WIKI_DISABLE_CACHE=true
+WIKI_DISABLE_CACHE=false
 
 # use by acme
 ACME_EMAIL=acme@example.com
