--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -22,6 +22,7 @@ services:
       TRAEFIK_API_DASHBOARD: "true"
       TRAEFIK_API_INSECURE: "true"
       LEGO_CA_CERTIFICATES: /var/pebble-test-certs/pebble.minica.pem
+      LEGO_CA_SERVER_NAME: pebble
       TRAEFIK_CERTIFICATESRESOLVERS_pebble_ACME_CASERVER: https://pebble:14000/dir
       TRAEFIK_CERTIFICATESRESOLVERS_pebble_ACME_EMAIL: ${ACME_EMAIL}
       TRAEFIK_CERTIFICATESRESOLVERS_pebble_ACME_STORAGE: /etc/traefik/acme/acme.json
