improve service naming

--- a/.env.dev
+++ b/.env.dev
@@ -17,11 +17,14 @@ WIKI_PASSWORD_SENDER_EMAIL=passwordsender@wiki.localhost
 WIKI_EMERGENCY_CONTACT_EMAIL=emergencycontact@wiki.localhost
 
 # database
-WIKI_DATABASE_HOST=db-mariadb
+WIKI_DATABASE_HOST=mariadb
+WIKI_DATABASE_PORT=3306
 WIKI_DATABASE_ROOT_PASSWORD=mediawiki
 WIKI_DATABASE_NAME=mediawiki
 WIKI_DATABASE_USER=mediawiki
 WIKI_DATABASE_PASSWORD=mediawiki
+WIKI_REDIS_HOST=redis
+WIKI_REDIS_PORT=6379
 
 # debug
 WIKI_DEBUG=true
