--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,8 +78,7 @@ services:
     volumes:
       - redis-data:/data
       - ./redis/conf:/usr/local/etc/redis
-    command:
-      - /usr/local/etc/redis/redis.conf
+    command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
     networks:
       - backend
 
