--- a/.env.dev
+++ b/.env.dev
@@ -35,13 +35,12 @@ ACME_EMAIL=acme@example.com
 
 TZ=Asia/Shanghai
 
-# autobackup
-RESTIC_REPOSITORY=/mnt/restic
-RESTIC_PASSWORD=mediawiki
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
-AWS_DEFAULT_REGION=""
+
+# rclone
 BACKUP_CRON="*/1 * * * *"
-RESTIC_OPTIONS="--verbose"
-RESTIC_BACKUP_OPTIONS="--tag dev"
-RESTIC_FORGET_OPTIONS= "--keep-last 5 --prune"
+BACKUP_OPTS="--verbose"
+BACKUP_DST=/srv/backup
+BACKUP_SRC=/data
+BACKUP_DATABASE_SRC=/data/database
+BACKUP_UPLOAD_SRC=/data/upload
+BACKUP_LOCK_PATH=/var/lock/backup
