support configuable hostname

--- a/.env.dev
+++ b/.env.dev
@@ -30,6 +30,8 @@ WIKI_REDIS_PORT=6379
 WIKI_DEBUG=true
 WIKI_DISABLE_CACHE=false
 
+MAILCATCHER_HOST=mailcatcher.localhost
+
 # use by acme
 ACME_EMAIL=acme@example.com
 
