--- a/.env.dev
+++ b/.env.dev
@@ -30,6 +30,9 @@ WIKI_REDIS_PORT=6379
 WIKI_DEBUG=true
 WIKI_DISABLE_CACHE=false
 
+WIKI_SCRIPT_DIR=/wikiscripts
+WIKI_SMWCONF_DIR=/var/smwconf
+
 MAILCATCHER_HOST=mailcatcher.localhost
 
 # use by acme
@@ -38,11 +41,26 @@ ACME_EMAIL=acme@example.com
 TZ=Asia/Shanghai
 
 
+# traefik
+TRAEFIK_HOST=traefik.localhost
 # rclone
-BACKUP_CRON="*/1 * * * *"
+# intensional for development that this cron expression 
+# will never be execute at 31st Feb
+BACKUP_CRON="0 0 31 2 *"
 BACKUP_OPTS="--verbose"
-BACKUP_DST=/srv/backup
+# see environment section in compose file
+#BACKUP_DST=/srv/backup
 BACKUP_SRC=/data
-BACKUP_DATABASE_SRC=/data/database
-BACKUP_UPLOAD_SRC=/data/upload
-BACKUP_LOCK_PATH=/var/lock/backup
+BACKUP_LOCK_DIR=/var/lock/mw
+BACKUP_SCRIPT_DIR=/scripts
+
+# minio
+MINIO_HOST=minio.localhost
+MINIO_CONSOLE_HOST=console.minio.localhost
+
+# S3
+S3_PROVIDER=Minio
+S3_ENDPOINT="http://minio:9000"
+S3_ACCESS_KEY_ID=development
+S3_SECRET_ACCESS_KEY=development
+S3_BUCKET=dev
