--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./mediawiki
       target: dev
-    restart: no
+    restart: 'no'
     volumes:
       - ./mediawiki/LocalSettings.php:${MW_INSTALL_PATH}/LocalSettings.php
     environment:
@@ -17,13 +17,13 @@ services:
       - smtp
 
   mariadb:
-    restart: no
+    restart: 'no'
 
   redis:
-    restart: no
+    restart: 'no'
 
   traefik:
-    restart: no
+    restart: 'no'
     environment:
       TRAEFIK_LOG_LEVEL: DEBUG
       TRAEFIK_API_DASHBOARD: "true"
@@ -114,7 +114,7 @@ services:
       - s3
 
   rclone:
-    restart: no
+    restart: 'no'
     environment:
       BACKUP_DST: :s3,provider={S3_PROVIDER},env_auth=false,endpoint="${S3_ENDPOINT}",access_key_id=${S3_ACCESS_KEY_ID},secret_access_key=${S3_SECRET_ACCESS_KEY}:${S3_BUCKET}
     networks:
