update mariadb and redis name in env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,13 @@ services:
       WIKI_SMTP_AUTH:
       WIKI_SMTP_USERNAME:
       WIKI_SMTP_PASSWORD:
-      WIKI_DATABASE_HOST:
-      WIKI_DATABASE_PORT:
-      WIKI_DATABASE_NAME:
-      WIKI_DATABASE_USER:
-      WIKI_DATABASE_PASSWORD:
-      WIKI_REDIS_HOST:
-      WIKI_REDIS_PORT:
+      MARIADB_HOST:
+      MARIADB_PORT:
+      MARIADB_DATABASE_NAME:
+      MARIADB_DATABASE_USER:
+      MARIADB_DATABASE_PASSWORD:
+      REDIS_HOST:
+      REDIS_PORT:
       WIKI_READONLYFILE_PATH: ${BACKUP_LOCK_DIR}/lock
       WIKI_SCRIPT_DIR:
     volumes:
@@ -69,10 +69,10 @@ services:
     environment:
       TZ:
       # @see https://phabricator.wikimedia.org/source/mediawiki/browse/master/includes/DefaultSettings.php
-      MYSQL_DATABASE: ${WIKI_DATABASE_NAME}
-      MYSQL_USER: ${WIKI_DATABASE_USER}
-      MYSQL_PASSWORD: ${WIKI_DATABASE_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${WIKI_DATABASE_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MARIADB_DATABASE_NAME}
+      MYSQL_USER: ${MARIADB_DATABASE_USER}
+      MYSQL_PASSWORD: ${MARIADB_DATABASE_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD}
     volumes:
       - wiki-database:/var/lib/mysql
       - wiki-database-dump:/docker-entrypoint-initdb.d
@@ -137,11 +137,11 @@ services:
       BACKUP_DST:
       BACKUP_SRC:
       BACKUP_LOCK_DIR:
-      BACKUP_DB_HOST: ${WIKI_DATABASE_HOST}
-      BACKUP_DB_PORT: ${WIKI_DATABASE_PORT}
-      BACKUP_DB_NAME: ${WIKI_DATABASE_NAME}
-      BAKCUP_DB_USER: ${WIKI_DATABASE_USER}
-      BACKUP_DB_PASS: ${WIKI_DATABASE_PASSWORD}
+      BACKUP_DB_HOST: ${MARIADB_HOST}
+      BACKUP_DB_PORT: ${MARIADB_PORT}
+      BACKUP_DB_NAME: ${MARIADB_DATABASE_NAME}
+      BAKCUP_DB_USER: ${MARIADB_DATABASE_USER}
+      BACKUP_DB_PASS: ${MARIADB_DATABASE_PASSWORD}
       BACKUP_SCRIPT_DIR:
     command: >
      sh -c "
