update smtp env name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,11 @@ services:
       WIKI_HOST:
       WIKI_PASSWORD_SENDER_EMAIL:
       WIKI_EMERGENCY_CONTACT_EMAIL:
-      WIKI_SMTP_HOST:
-      WIKI_SMTP_PORT:
-      WIKI_SMTP_AUTH:
-      WIKI_SMTP_USERNAME:
-      WIKI_SMTP_PASSWORD:
+      SMTP_HOST:
+      SMTP_PORT:
+      SMTP_AUTH:
+      SMTP_USERNAME:
+      SMTP_PASSWORD:
       MARIADB_HOST:
       MARIADB_PORT:
       MARIADB_DATABASE_NAME:
