refactor backup&restore

--- a/dev.env
+++ b/dev.env
@@ -1,3 +1,6 @@
+COMPOSE_MODE=dev
+COMPOSE_PROJECT_NAME=MW
+
 # mediawiki install path
 MW_INSTALL_PATH=/var/www/html
 # mediaiwki site name, user by $wgSitename
@@ -20,9 +23,11 @@ WIKI_EMERGENCY_CONTACT_EMAIL=emergencycontact@wiki.localhost
 MARIADB_HOST=mariadb
 MARIADB_PORT=3306
 MARIADB_ROOT_PASSWORD=mediawiki
-MARIADB_DATABASE_NAME=mediawiki
-MARIADB_DATABASE_USER=mediawiki
-MARIADB_DATABASE_PASSWORD=mediawiki
+MARIADB_DATABASE=mediawiki
+MARIADB_USER=mediawiki
+MARIADB_PASSWORD=mediawiki
+
+# cache
 REDIS_HOST=redis
 REDIS_PORT=6379
 
@@ -31,8 +36,8 @@ WIKI_DEBUG=true
 WIKI_DISABLE_CACHE=false
 
 WIKI_SCRIPT_DIR=/wikiscripts
-WIKI_SMWCONF_DIR=/var/smwconf
 
+# mailcatcher
 MAILCATCHER_HOST=mailcatcher.localhost
 
 # use by acme
@@ -43,17 +48,11 @@ TZ=Asia/Shanghai
 
 # traefik
 TRAEFIK_HOST=traefik.localhost
-# rclone
-# intensional for development that this cron expression 
-# will never be execute at 31st Feb
-BACKUP_CRON="0 0 31 2 *"
-BACKUP_OPTS="--verbose"
-# see environment section in compose file
-#BACKUP_DST=/srv/backup
-BACKUP_SRC=/data
-BACKUP_LOCK_DIR=/var/lock/mw
-BACKUP_SCRIPT_DIR=/scripts
 
+# rclone
+BACKUP_OPTS="--quiet"
+BACKUP_DST=/var/backups/mediawiki
+LOCK_DIR=/var/lock/mediawiki
 # minio
 MINIO_HOST=minio.localhost
 MINIO_CONSOLE_HOST=console.minio.localhost
