--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   mediawiki:
     build:
-      context: ./mediawiki
+      context: mediawiki
       target: prod
     command: 
       - apache2-foreground
