improve backup&restore

--- a/dev.env
+++ b/dev.env
@@ -50,8 +50,8 @@ TZ=Asia/Shanghai
 TRAEFIK_HOST=traefik.localhost
 
 # rclone
-BACKUP_OPTS="--quiet"
-BACKUP_DST=/var/backups/mediawiki
+RCLONE_SYNC_OPTS="--quiet"
+RCLONE_SYNC_REMOTE=/var/backups/mediawiki
 LOCK_DIR=/var/lock/mediawiki
 # minio
 MINIO_HOST=minio.localhost
